--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -17,6 +17,7 @@ v0.47.1-SNAPSHOT
 + PR #1305: Mac OSX key bindings on non-standard look and feel
 + PR #1304: Markdown Editor
 + PR #1303: Various GUI fixes
++ Issue #1290: Fixes for issues with campaign subset export.
 
 v0.47.0 (2019-08-21 0300 UTC)
 + Issue #1171: Adds autosave feature (daily or weekly, and/or before missions).
