--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -19,6 +19,7 @@ v0.47.1-SNAPSHOT
 + PR #1303: Various GUI fixes
 + Issue #1290: Fixes for issues with campaign subset export.
 + PR #1309: Planetary System Map
++ PR #1314: a few map fixes
 
 v0.47.0 (2019-08-21 0300 UTC)
 + Issue #1171: Adds autosave feature (daily or weekly, and/or before missions).
