--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -20,7 +20,8 @@ v0.47.1-SNAPSHOT
 + Issue #1290: Fixes for issues with campaign subset export.
 + PR #1309: Planetary System Map
 + PR #1314: a few map fixes
-+ PR #1286,1307: Scenario Objectives - explicit objective management system for legacy AtB scenarios and for dynamic scenarios generated via scenario templates.
++ PR #1286,1307: Scenario Objectives - explicit objective management system for legacy AtB scenarios;
+	Ability to define objectives for scenario templates.
 
 v0.47.0 (2019-08-21 0300 UTC)
 + Issue #1171: Adds autosave feature (daily or weekly, and/or before missions).
