--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -4,6 +4,7 @@ v0.47.2-SNAPSHOT
 + PR #1325: Customize protomechs and advanced aero in MekLab
 + PR #1326: Fix another potential error preventing day advancement when giving training XP
 + Issue #1327, 1329: Fixed multiple issues relating to scenario resolution introduced in 47.1
++ Issue #1333: Simca Ambulance possibly causing campaign to not load
 
 v0.47.1 (2019-11-05 0300 UTC)
 + PR #1259: Fix map size display for AtB scenarios in the briefing tab (cosmetic issue only)
