--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -7,6 +7,7 @@ v0.47.2-SNAPSHOT
 + Issue #1333: Simca Ambulance possibly causing campaign to not load
 + Issue #1337: Offboard artillery - designate hex phase skipped when artillery comes from mekhq
 + Issue #1330: Fix NPE when PersonViewPanel has a pregnant individual
++ Issue #1316: Resolve money parsing exception in Retirement Defection Tracker
 
 v0.47.1 (2019-11-05 0300 UTC)
 + PR #1259: Fix map size display for AtB scenarios in the briefing tab (cosmetic issue only)
