--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -6,6 +6,7 @@ v0.47.3-SNAPSHOT
 + Issue #1349: Problem with replacing Protomech limbs lost in combat
 + PR #1352: Feature: Add origin planet to Personnel
 + PR #1355: General support vehicle crew (fixes deployment bug)
++ Issue #1354: Feature: adds +/-100M button to New Loan dialog
 
 v0.47.2 (2019-11-15 2000 UTC) 
 + PR #1325: Customize protomechs and advanced aero in MekLab
