--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -7,6 +7,7 @@ v0.47.3-SNAPSHOT
 + PR #1352: Feature: Add origin planet to Personnel
 + PR #1355: General support vehicle crew (fixes deployment bug)
 + Issue #1354: Feature: adds +/-100M button to New Loan dialog
++ PR #1289, #1359: Feature: adds GM Jumpship Recharge on Interstellar Map context menu
 
 v0.47.2 (2019-11-15 2000 UTC) 
 + PR #1325: Customize protomechs and advanced aero in MekLab
