--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -14,6 +14,7 @@ v0.47.3-SNAPSHOT
 + Issue #1370: Unit Rating FM:M(r): 0 dividends now produce 100% fulfilled need instead of 0% fulfilled need
 + Issue #1374: Unit Rating: Small Craft Bay can now store Fighters
 + PR #1379: Feature: Adds hyperlink from origin system on personnel panel to the map panel
++ PR #1382: Speed up Advance Day using profiling data
 
 v0.47.2 (2019-11-15 2000 UTC) 
 + PR #1325: Customize protomechs and advanced aero in MekLab
