--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -23,6 +23,8 @@ v0.47.3-SNAPSHOT
 + Issue #1363: Feature: in Hangar's Assign Tech menu, group by skill level
 + PR #1403: Bug: TO&E menu may crash if no units in force (and general cleanup)
 + Issue #1263: Fixing Marriages Without Surnames
++ Issue #1405: Feature: Display Mother and Father for Children in the Force
++ Issue #1406: Feature: Add hyperlinks to family members
 
 v0.47.2 (2019-11-15 2000 UTC) 
 + PR #1325: Customize protomechs and advanced aero in MekLab
