--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -39,6 +39,7 @@ v0.47.3-SNAPSHOT
 + PR #1435: Improved fault tolerance for campaigns with large craft that have gone sour due to bad refits
 + PR #1437: Personnel View: Mother will no longer break if a person only has a father
 + Issue #1433: Enabling RandomizePortraits for personnel with pre-existing portraits
++ PR #1438: Adding Scrollbar to Personnel Settings under Campaign Options for small screens
 
 v0.47.2 (2019-11-15 2000 UTC) 
 + PR #1325: Customize protomechs and advanced aero in MekLab
