--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -7,6 +7,7 @@ v0.47.4-SNAPSHOT
 + PR #1449 #1452: Fixes for multiple unit transport assignment issues; sorting of unit assignment destinations by unit bay type
 + Issue #1454: Adding scrollbar to NewContractDialog
 + PR #1463: Modifying the PersonViewPanel to properly display Due Date and Age
++ Issue #925: Fixing Zombie Time in Service
 
 v0.47.3 (2020-2-11 2200 UTC) 
 + Issue #1344: Ensure techs show the right skill for Protomechs
