--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -8,6 +8,7 @@ v0.47.4-SNAPSHOT
 + Issue #1454: Adding scrollbar to NewContractDialog
 + PR #1463: Modifying the PersonViewPanel to properly display Due Date and Age
 + Issue #925: Fixing Zombie Time in Service
++ Issue #1455: Possible fix for failure to generate units from RAT files due to said RAT files not loading fast enough
 
 v0.47.3 (2020-2-11 2200 UTC) 
 + Issue #1344: Ensure techs show the right skill for Protomechs
