--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,7 +1,8 @@
 VERSION HISTORY:
 ----------------
 0.47.5-SNAPSHOT
-+ Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error 
++ Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
++ Issue #1261: RFE: In Contract Market, hyperlink the system/location to the Interstellar Map
 
 v0.47.4 (2020-2-09 2200 UTC)
 + PR #1440: Implement "Rugged" quirk (2x or 3x between maintenance rolls)
