--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -14,6 +14,7 @@ VERSION HISTORY:
 + Issue #1508: Injured personnel Keep Command of their Vehicles and Infantry units
 + Issue #1429: Adding Bulk Add to the Parts Marketplace.
 + PR #1500: Scenario Generation properly handles GM Generation and Multiple Missions
++ Issue #1505: Fixing Personnel Tab Graphical Unit Images for Mixed Fighter and Tech Person
 
 v0.47.4 (2020-2-09 2200 UTC)
 + PR #1440: Implement "Rugged" quirk (2x or 3x between maintenance rolls)
