--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -16,6 +16,7 @@ VERSION HISTORY:
 + PR #1500: Scenario Generation properly handles GM Generation and Multiple Missions
 + Issue #1505: Fixing Personnel Tab Graphical Unit Images for Mixed Fighter and Tech Person
 + PR #1519: Adding proper bondsman formatting when Added to Campaign
++ Issue #1492: Medical Report Displays for Personnel with GM Added Injury
 
 v0.47.4 (2020-2-09 2200 UTC)
 + PR #1440: Implement "Rugged" quirk (2x or 3x between maintenance rolls)
