--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -19,6 +19,7 @@ VERSION HISTORY:
 + Issue #1492: Medical Report Displays for Personnel with GM Added Injury
 + Issue #1497: Scale Unit sell values by their Entity's price multiplier
 + PR #1509: Adding Monthly and Yearly Autosave Options
++ Issue #1482: Hire Full Complement Now Records Time in Service
 
 v0.47.4 (2020-2-09 2200 UTC)
 + PR #1440: Implement "Rugged" quirk (2x or 3x between maintenance rolls)
