--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -21,6 +21,7 @@ VERSION HISTORY:
 + PR #1509: Adding Monthly and Yearly Autosave Options
 + Issue #1482: Hire Full Complement Now Records Time in Service
 + Issue #1486: Fixing Unit and Personnel Export to CSV and Localizing Top Menu Bar
++ Issue #1530: Fixes issue in infirmary where buttons unreadable in dark mode
 
 v0.47.4 (2020-2-09 2200 UTC)
 + PR #1440: Implement "Rugged" quirk (2x or 3x between maintenance rolls)
