--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -29,6 +29,7 @@ VERSION HISTORY:
 + PR #1555: Fixing spacing for C3 Slaves in the TOE
 + Issue #1564: Hide impossible parts in the Purchase Parts Windows
 + PR #1533: Windchild's Personnel Improvements, covering Issues #765, #876, #1404, #1482, #1486, #1492
++ Issue #1524: Sort P_NONE Personnel as Support Personnel
 
 v0.47.4 (2020-2-09 2200 UTC)
 + PR #1440: Implement "Rugged" quirk (2x or 3x between maintenance rolls)
