--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -32,6 +32,7 @@ VERSION HISTORY:
 + Issue #1524: Sort P_NONE Personnel as Support Personnel
 + Issues #1542 and #1417: Hangar Tab Popup List: Bulk Selection and Rank Fixes
 + PR #1556: Updating Unit Rating wording
++ PR #1584: Stop double-counting medics for FMM:R unit rating
 
 v0.47.4 (2020-2-09 2200 UTC)
 + PR #1440: Implement "Rugged" quirk (2x or 3x between maintenance rolls)
