--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -36,6 +36,7 @@ VERSION HISTORY:
 + Issue #691: Fixed multiple issues importing units from MUL files, including portraits, gender, SPAs
 + PR #1583: Adding Menu Bar Mnemonics (Shortcut Keys)
 + Issue #1540: Switching over to using JSpinner for base salaries
++ Issue #1578: Adding New Campaign to the main menu
 
 v0.47.4 (2020-2-09 2200 UTC)
 + PR #1440: Implement "Rugged" quirk (2x or 3x between maintenance rolls)
