--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -5,6 +5,7 @@ VERSION HISTORY:
 + PR #1627: Moved pregnancy GM items to Personnel GM menu (and hide GM menu if not a GM)
 + Issue #1612: Adding Scrolling to Marriage Candidates
 + PR #1606: Abandon ship (MekHQ version)! Crews of large craft and units transported aboard large craft are handled during scenario resolution.
++ PR #1618: De-clutter assign lance tech menu in TO&E
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
