--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -6,6 +6,7 @@ VERSION HISTORY:
 + Issue #1612: Adding Scrolling to Marriage Candidates
 + PR #1606: Abandon ship (MekHQ version)! Crews of large craft and units transported aboard large craft are handled during scenario resolution.
 + PR #1618: De-clutter assign lance tech menu in TO&E
++ Issue #1632: All random marriages default to same sex
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
