--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -9,6 +9,7 @@ VERSION HISTORY:
 + Issue #1632: All random marriages default to same sex
 + Issue #1626: Adding Time in Rank to MekHQ
 + PR #1634Z Fixing Activate/Mothball Display Text
++ Issue #1636: ExtraData Export Fails because of Null Mapping
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
