--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -11,6 +11,7 @@ VERSION HISTORY:
 + PR #1634: Fixing Activate/Mothball Display Text
 + Issue #1636: ExtraData Export Fails because of Null Mapping
 + PR #1642: Fixing Popup Display Text Spacing Issues in DataLoadingDialog
++ Issue #1218: Personnel Total Earnings Tracking
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
