--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -14,6 +14,7 @@ VERSION HISTORY:
 + Issue #1218: Personnel Total Earnings Tracking
 + Issue #1613: Automatically Output Finances Table to File on New Year
 + Issue #1134: Option to Disable Dependent Automatic Addition in AtB
++ PR #1645: Deploying units as reinforcements to AtB and template scenarios no longer defaults them to the "any" deployment zone
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
