--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -17,6 +17,7 @@ VERSION HISTORY:
 + PR #1645: Deploying units as reinforcements to AtB and template scenarios no longer defaults them to the "any" deployment zone
 + Issue #1649, #1651: Fixing ExtraData Unmarshaller
 + PR #1654: Fixing Spouse and Baby Load from Personnel export
++ PR #1656: Avoid NRE in Person::isMothballing
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
