--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -24,6 +24,7 @@ VERSION HISTORY:
 + PR #1673: Removing Prisoner to Personnel Random Marriage by implementing Prisoner to Prisoner Random Marriage.
 + PR #1663: Fixing Clanner Name Migration
 + PR #1681: Change refit model weight calculation to work with BA
++ PR #1685: Adding All Role and No Role options for Portraits
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
