--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -28,6 +28,7 @@ VERSION HISTORY:
 + PR #1688: Single Portrait Bulk Assignment to Personnel
 + Issue #1683: Adding the option to log marriage name changes
 + PR #1670: Improved Standard Awards
++ PR #1693: Fixing Campaign Options Display Spacing Issues
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
