--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -29,6 +29,9 @@ VERSION HISTORY:
 + Issue #1683: Adding the option to log marriage name changes
 + PR #1670: Improved Standard Awards
 + PR #1693: Fixing Campaign Options Display Spacing Issues
++ Issue #1285: Adding default value to prevent Personnel Market No-Role Personnel
++ Issues #880 and #1671: Paid Recruitment Roll is now based on having an active contract
++ Issues ##1614 and #1615: Adding a Financial Year Duration Option
 
 0.47.5 (2020-4-01 2000 UTC)
 + Issue #1470: Thumper artillery vehicle causes array index out of bounds exception error
