--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,6 +1,6 @@
 VERSION HISTORY:
 ----------------
-0.47.6-SNAPSHOT
+0.47.6 (2020-5-03 1715 UTC)
 + PR #1610: Raised cost of edge points from 1 to 10 for the AtB configuration preset.
 + PR #1627: Moved pregnancy GM items to Personnel GM menu (and hide GM menu if not a GM)
 + Issue #1612: Adding Scrolling to Marriage Candidates
