--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,6 +1,7 @@
 VERSION HISTORY:
 ----------------
 0.47.7-SNAPSHOT
++ PR #1759: acquisition tables are not refreshing on new day
 + PR #1758: Planetary acquisition fixes
 + Issue #1725: Refit does not save original part quality when the part is cloned
 + Issue #1665: Use ammo by type (unofficial) does not work
